# SPDX-License-Identifier: MIT
#
# Copyright 2023 Cisco Systems, Inc. and its affiliates
#
# Use of this source code is governed by an MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT.

[package]
name = "erspan"
version = "0.2.2"
authors = ["Laco Skokan <lskokan@cisco.com>"]
license = "MIT"
description = "Unwraps original data packet from GRE/ERSPAN packet"
homepage = "https://github.com/skoky/erspan-rs"
documentation = "https://github.com/skoky/erspan-rs"
repository = "https://github.com/skoky/erspan-rs"
readme = "README.md"
edition = "2021"

[dependencies]
pnet = "0.34.0"
hex = "0.4.2"
byteorder = "1.4.2"
thiserror = "1.0.23"
